# reachy-mini-starter

./: .gitignore  LICENSE  README.md  README_EN.md  demo2.py  main.py  pyproject.toml  requirements.txt
01_camera_display/: README.md  camera_display_basic.py  camera_display_optimized.py
02_slider_control/: README.md
03_object_tracking/: README.md  object_tracking.py  object_tracking_v2.py
03_object_tracking/object_tracking_yolo/: README.md  head_yaw_controller.py  position_filter.py  track_object.py  yolo_detector.py
03_object_tracking/object_tracking_yolo_web/: API_DOCS.md  README.md  main.py  requirements.txt  start.py
04_interpolation_comparison/: README.md  interpolation_demo.py  interpolation_theory.py
05_audio_streaming/: README.md  audio_streaming.py  mic_recording.py
06_sound_tracking/: README.md  sound_tracking.py
demos/: API_接口开发指南.md  CN使用修改.md  CN连接配网.md  USAGE_GUIDE_CN.md  config_loader.py  robot_config.yaml.template
demos/01_basic_audio_control/: README.md  test_audio_control.py
demos/02_basic_body_rotation/: README.md  test_body_rotation.py
demos/03_basic_nod_head/: README.md  test_nod_head.py
demos/04_basic_shake_head/: README.md  test_shake_head.py
demos/05_webrtc_video_stream/: 05.py  README.md
demos/06_zenoh_basic_control/: README.md  (+1 more)
docs/: API_REFERENCE.md  API_REFERENCE_CN.md  API_REFERENCE_SUPPLEMENT.md  API_REFERENCE_SUPPLEMENT_cn.md  GSTREAMER.md  GSTREAMER_CN.md  NETWORK_GUIDE.md  NETWORK_GUIDE_CN.md  NOTE_cn.md  REACHY_MINI_SDK_GUIDE.md  REACHY_MINI_SDK_GUIDE_cn.md  USAGE_GUIDE.md  USAGE_GUIDE_CN.md
(+59 files in other folders)
