[project]
name = "reachymini-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sock>=0.7.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "reachy-mini>=1.2.8",
    "ultralytics>=8.3.250",
]
